# codeshift

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  benchmark_run_20260530.txt  benchmark_run_claude_20260530.txt  capture_f6_claude.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
agent/: __init__.py  llm.py  loop.py  migrate.py  parsing.py  prompts.py  schemas.py  tools.py
analyzer/: __init__.py  analyzer.py  constants.py  detectors.py  parser.py  scan.py  schema.py
benchmark/: README.md  __init__.py  metadata.py  run_all.py  runner.py
benchmark/cases/apply_builtin/: source_py2.py  test_behavior.py
benchmark/cases/bandwidth_estimator/: source_py2.py  test_behavior.py
benchmark/cases/basestring_isinstance/: source_py2.py  test_behavior.py
benchmark/cases/cmp_builtin/: source_py2.py  test_behavior.py
benchmark/cases/column_merger/: source_py2.py  test_behavior.py
benchmark/cases/config_value_encoder/: source_py2.py  test_behavior.py
benchmark/cases/csv_field_builder/: source_py2.py  test_behavior.py
benchmark/cases/dict_iteration/: source_py2.py  (+1 more)
docs/: METHODOLOGY.md
samples/: gnarly_py2.py
samples/migration_demo/: source_py2.py  test_source_py2.py
sandbox/: __init__.py  base.py  hardened.py  local.py
scripts/: demo_migration.py  demo_migration_scripted.py  demo_oscillation.py  demo_regression.py
scripts/diagnostics/: capture_f6_failures.py
tests/: test_analyzer.py  test_benchmark_runner.py  test_llm_router.py  test_loop_guards.py  test_parsing.py  test_prompts.py  test_sandbox_hardened.py
(+66 files in other folders)
