[project]
name = "codeshift"
version = "0.1.0"
description = "Python 2→3 migration tool powered by an LLM agent with a behavioral benchmark suite"
authors = [{ name = "gkhurana21" }]
license = { text = "MIT" }
requires-python = ">=3.9"
readme = "README.md"

[project.urls]
Repository = "https://github.com/gkhurana21/codeshift"
Issues = "https://github.com/gkhurana21/codeshift/issues"

[tool.pytest.ini_options]
# testpaths scoped to tests/ only — excludes:
#   samples/migration_demo/test_source_py2.py  (unmigrated Py2 fixture, fails on Py3 by design)
#   benchmark/cases/*/test_behavior.py         (oracle bite-check, run separately, needs context)
testpaths = ["tests"]
